2017-10-18 Riccardo Mottola <rm@gnu.org>

	* DBFileWriter.m (formatComplexObject:)
	Cleanup and optimize nested Field Name concatenation.

2017-10-17 Riccardo Mottola <rm@gnu.org>

	* DBSFTypeWrappers.h
	* DBSFTypeWrappers.m
	* DBFileWriter.m
	* DBCSVWriter.m
	* DBHTMLWriter.m
	New FileType objects to store and wrap specific data types and be able
	to easily identify them after (NSNumber is not flexible for Bool and
	other types are needed). Adapt all Writers.

2017-10-12 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	retain/autorelease queryLocator so that it remains usable in the next
	cycle.
	Retain/Release the result record to make it survive the describe cycle.

2017-10-11 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (_queryMore)
	Update to type enhacenemnts implemented in query

2017-10-11 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (_query)
	Format Objects after describes

2017-10-10 Riccardo Mottola <rm@gnu.org>

	* DBHTMLWriter.m
	Output Numbers in General format.

2017-10-09 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Set logger on DBSoap

2017-10-05 Riccardo Mottola <rm@gnu.org>

	* DBHTMLWriter.m
	Some Excel specific HTML tags for format and linebreaks

2017-10-05 Riccardo Mottola <rm@gnu.org>

	* DBHTMLWriter.h
	* DBHTMLWriter.m
	Start differentiating between HTML and pseudo-XLS

2017-10-05 Riccardo Mottola <rm@gnu.org>

	* DBHTMLWriter.h
	* DBHTMLWriter.m
	* DBCSVWriter.h
	* DBCSVWriter.m
	Provide file type constants.

2017-10-03 Riccardo Mottola <rm@gnu.org>

	* DBHTMLWriter.m
	Handle some HTML escaping.

2017-10-03 Riccardo Mottola <rm@gnu.org>

	* DBHTMLWriter.m
	Handle also unordered writing in HTML output.

2017-10-03 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.m
	* DBFileWriter.m
	* DBHTMLWriter.m
	Initialize from superclass properly

2017-10-02 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.h
	* DBSoapCSV.m
	writeStart and writeEnd for each writer.

2017-10-02 Riccardo Mottola <rm@gnu.org>

	* DBFileWriter.h
	* DBFileWriter.m
	* DBCSVWriter.m